# AgentXAI

./: .env.example  .gitignore  AgentXAI_Technical_Report.docx  CLAUDE.md  Makefile  README.md  exported_agentxai_records.json  inspect_last_task.py  pyproject.toml  regen_explanation.py  requirements.txt  rescore_last_run.py  run_pipeline.py  task.json  tasks.py  trial.py  ~$entXAI_Technical_Report.docx
.claude/: settings.local.json
agentxai/: _llm_factory.py
agentxai/agents/: README.md  _llm_utils.py  base.py  critic.py  orchestrator.py  specialist_a.py  specialist_b.py  synthesizer.py
agentxai/api/: README.md  (+1 more)
docs/: ARCHITECTURE.md  DATASET.md  IMPROVEMENT_PLAN.md
eval/: aggregate_manual_reviews.py  evaluate.py  evaluate_accountability.py  evaluate_existing.py  results_20260504T103210Z.json  results_20260504T103210Z.md  results_existing_20260427_191323.json  results_existing_20260427_191323.md
tests/: conftest.py  test_accountability.py  test_agents.py  test_api.py  test_api_security.py  test_causal_dag.py  test_confidence_factors.py  test_counterfactual_engine.py  test_critic.py  test_dashboard_staleness.py  test_evaluate_accountability.py  test_evidence_attribution.py  test_faithfulness_checks.py  test_knowledge_base.py  test_llm_utils.py  test_load_medqa.py  test_manual_reviews.py  test_match_option_letter.py  test_memory_logger.py  test_message_logger.py  test_pipeline_smoke.py  test_plan_tracker.py  test_question_classifier.py  test_schemas.py  test_tool_provenance.py  test_tools.py  test_trajectory_logger.py  test_trajectory_store.py  test_xai_config.py
(+38 files in other folders)
